# LLMConsciousnessSelfAttributionRepo

./: README.md  pyproject.toml
prototyping_scripts/: ModalExperimentsBergPaperStyleSelfMonitoring.ipynb  ModalExperimentsBergPaperStyleSelfMonitoring.py  OpenWeightsExperimentsBergPaperStyleSelfMonitoring.ipynb  PETRIevalsApril22.ipynb  PETRIevalsApril22.py
prototyping_scripts/apr_22_logs/olmo_7b_instruct_series/: 2026-04-23T02-42-07-00-00_berg-style-self-monitoring_j8AF9A5CKM4wyE2r6E9WmZ.json  2026-04-23T05-43-07-00-00_berg-style-self-monitoring_PQasSohyQWoUc2kLabiwDT.json  2026-04-23T06-01-56-00-00_berg-style-self-monitoring_7w5fGo4zTQ8JsRGMsEcuEK.json
